tests: fixed bugs discovered while testing
